--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,8 @@
 
 <p><strong>Title: </strong> <%= @article.title %> </p>
 <p><strong>Description: </strong> <%= @article.description %> </p>
+
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: "are you sure"} %> |
+<%= link_to 'Return to Articles Listing', articles_path %>
+
