--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<this is about page>
+<h1> About Page </h1>
+
+
+<%= link_to 'Go to Articles Listing', articles_path %> |
+<%= link_to 'Go to Home Page', root_path %>
