--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Action</th>
+      <th colspan="3">Action</th>
     </tr>
   </thead>
 
@@ -14,9 +14,14 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
-        <td>Plaeholder</td>
+        <td><%= link_to 'Show', article_path(article) %></td>
+        <td><%= link_to 'Edit', edit_article_path(article) %></td>
+        <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "are you sure"} %></td>
       </tr>
     <% end %>
   </tbody>
 
 </table>
+
+<br>
+<%= link_to 'Create new article', new_article_path %>
