--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>this is home page</h1>
+<h1>Welcome to the home page</h1>
+
+<%= link_to 'Go to Articles Listing', articles_path %> |
+<%= link_to 'Go to About Page', about_path %>
