--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,2 @@
-<h1>Edit Article</h1>
-
+<h1 class= "text-center mt-4 ">Edit Article</h1>
 <%= render 'form' %>
-
-<%= link_to 'Cancel and Return to Articles Listing', articles_path %>
