--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Create a New Article</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Return to Articles Listing', articles_path %>
+<div id="page-content">
+  <h1 class= "text-center mt-4 ">Create New Article</h1>
+  <%= render 'form' %>
+</div>
