--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
         <div class= "col-8 mt-4">
           <div class="card text-center shadow mb-5 bg-white rounded">
             <div class="card-header font-italic">
-              by Ammar Haseeb
+              by <%= article.user.username %>
             </div>
             <div class="card-body">
               <h5 class="card-title"><%= link_to article.title, article_path(article), class:"text-success" %></h5>
@@ -17,7 +17,7 @@
             <div class="card-footer text-muted">
               <small>
                 Created <%= time_ago_in_words(article.created_at) %> ago,
-                Edited <%= time_ago_in_words(article.updated_at) %>ago
+                Edited <%= time_ago_in_words(article.updated_at) %> ago
               </small>
             </div>
           </div>
