--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,6 +31,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "View your Profile", user_path(current_user), class: "dropdown-item" %></a>
               <%= link_to "Edit your Profile", edit_user_path(current_user), class: "dropdown-item" %></a>
+              <%= link_to "Delete your Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: { confirm: "Are you sure jani?" } %>
             </div>
           </li>
             <li class="nav-item">
