--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,8 +18,14 @@
             </h5>
             <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
             <%= link_to "View Profile", user, class: "btn btn-outline-success" %>
-            <% if logged_in? && user == current_user %>
-              <%= link_to "Edit Profile", edit_user_path(user), class: "btn btn-outline-info" %>
+            <% if logged_in? %>
+              <% if user == current_user %>
+                <%= link_to "Edit Profile", edit_user_path(user), class: "btn btn-outline-info" %>
+              <% end %>
+              <% if current_user.admin? %>
+               <%= link_to "Delete User", user_path(user), class: "btn btn-outline-danger", method: :delete,
+               data: {confirm: "Are you sure you want to delete user account and all associated articles?"} %>
+              <% end %>
             <% end %>
           </div>
           <div class="card-footer text-muted">
